# molclub

./: .coverage  LICENSE  Makefile  README.md  requirements_dev.txt  setup.cfg
molclub/: __init__.py  calc.py  conf.py  conf_gen.py  crest.py  mmff.py  utils.py  visualize.py  xtb.py
molclub.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
molclub/compute/: __init__.py  compute_utils.py  gfnff.py  gfnxtb.py  mmff.py  orca_dft.py  orca_utils.py  xtb_utils.py
molclub/conf_tools/: conf_utils.py  crest.py  etkdg.py
notebooks/: 1-conformer_generation.ipynb  charges  conf_gen.ipynb  crest.ipynb  element_fitting.ipynb  get_sample_mols.ipynb  methane.ipynb  orca.ipynb  parameter.md  playground.ipynb  xtb_vs_dft.ipynb
notebooks/data/: clinical_molecules.csv  clinical_molecules_subset.pkl
tests/: test_conf.py  test_conf_gen.py  test_xtb.py
tests/ref_files/: xtb.out
