[metadata]
name = molclub
version = 0.0.1
description = Cheminformatics package built on RDKit
# long_description = file: README.rst
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = molclub
install_requires = 
    rdkit-pypi

# allows creation of command line interfaces!
# [options.entrypoints]
# console_scripts = 
#     [cli_name] = molclub.module:main